2001-02-04  Arturo Espinosa  <arturo@ximian.com>

	* be.pl.in: (be_buffer_{load,save}): load a file into an array buffer
	and save it back.
	(be_map_dist): moved from network.pl.in.
	* network.pl.in: minor & typos.
	* replace.pl.in: routines for in-line replacing.
	* Makefile.am: install replace routines.
	* .cvsignore: ignore replace routines .pl file.

2001-02-05  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_split): Keep all tokens on line
	  associated with key.

	* media.pl.in: Added.

	* removable-media.pl.in: Added.

2001-02-04  Hans Petter Jansson  <hpj@ximian.com>

	* parse.pl.in (xst_parse_line_first): Stopped from losing return value.
	  Added & prefix to function call. Close file when done.
	* parse.pl.in (xst_parse_chat): Prevented $found from being global.
	  Close file when done.

2001-01-31  Tambet Ingo  <tambet@ximian.com>

	* users-conf.in (xml_print_nis): test function for nis.

2001-01-28  Arturo Espinosa  <arturo@ximian.com>

	* *-conf.in, *.pl.in: added emacs style directives.

2001-01-28  Hans Petter Jansson  <hpj@ximian.com>

	* be.pl.in: Added disaster recovery, with 9 rotated backups.
	  Removed some bogus debug output someone left behind.

2001-01-26  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in: parsing now follows the new hash structure.

2001-01-26  Chema Celorio  <chema@celorio.com>

	* be.pl.in: if $verbose, print the file name before it is
	opened

2001-01-25  Arturo Espinosa  <arturo@ximian.com>

	* new_network-conf.in, network.pl.in, parse.pl.in: completly new
	  network code and parsing routines.
	* network-conf.in: overwrote with new_network-conf.in and cvs
	  removing new_network-conf.in. Saving a backup, though.

2001-01-22  Arturo Espinosa  <arturo@ximian.com>

	* add_amp.sh: dumb program that fixes missing & when calling
	  functions in perl code.
	* *-conf.in and be.pl.in: passed through add_amp.sh.

2001-01-18  Chema Celorio  <chema@celorio.com>

	* TODO: deleted
