@@ -1,3 +1,9 @@
+2001-02-05  Tambet Ingo  <tambet@ximian.com>
+
+	* Makefile.am (backends): Added boot-conf into build
+
+	* boot-conf.in: New file.
+
 2001-02-04  Arturo Espinosa  <arturo@ximian.com>
 
 	* be.pl.in: (be_buffer_{load,save}): load a file into an array buffer
